--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
@@ -21,8 +21,8 @@
         @@include('_hero-slider-item.html', {
         "hero-slider-img": "images/white-house.jpg",
         "hero-slider-img-alt": "white-house",
-        "hero-slider-title": "MINIMAL & SOPHISTICATED",
-        "hero-slider-text": "UNVEIL SOPHISTICATED MINIMALISM"
+        "hero-slider-title": "MINIMAL & ELEGANT",
+        "hero-slider-text": "WE CREATE MINIMALISM"
         })
         @@include('_hero-slider-item.html', {
         "hero-slider-img": "images/sphere-house.jpg",
