--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
@@ -16,7 +16,7 @@
             @@include('_carusel-item.html', {
             "item-image": "images/sphere-house.jpg",
             "item-image-alt": "sphere-house",
-            "item-title": "EFFECTIVE ADVERTISING POINTERS.",
+            "item-title": "EFFECTIVE AND ADVERTISING POINTERS.",
             "item-description": "Having a home based business is a wonderful asset to your life...",
             "user-image": "images/user-icon2.jpg",
             "user-image-alt": "DOMINIC FREEMAN",
@@ -49,7 +49,7 @@
             @@include('_carusel-item.html', {
             "item-image": "images/red-house.jpg",
             "item-image-alt": "red-house",
-            "item-title": "EFFECTIVE ADVERTISING POINTERS.",
+            "item-title": "EFFECTIVE AND ADVERTISING POINTERS.",
             "item-description": "Free directories: directories are perfect for customers that are searching for...",
             "user-image": "images/user-icon5.jpg",
             "user-image-alt": "ANDRII MOTKALIUK",
