--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
@@ -9,7 +9,7 @@
         <div class="form-wrapper">
             <h2 class="form-wrapper__title">GET IN TOUCH</h2>
             <div class="row">
-                <div class="col-6 form-wrapper__info">
+                <div class="col-6 col-sm-12 form-wrapper__info">
                     <div class="info__item info-item">
                         <svg class="info-item__image">
                             <use xlink:href="images/sprite.svg#location"></use>
@@ -36,11 +36,13 @@
                         <p class="info-item__description">From 07:05AM to 19:30PM</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-sm-12">
                     <form class="form" id="user-form" action="">
                         <input id="user-name" type="text" name="user-name" placeholder="Name" />
                         <input id="email" type="email" name="email" placeholder="Email" />
-                        <button class="form-btn">Submit</button>
+                        <div class="btn-continer">
+                            <button class="form-btn">Submit</button>
+                        </div>
                     </form>
                 </div>
             </div>
