--- a/students/dunaieva_alona/second-exam/src/_footer.html
+++ b/students/dunaieva_alona/second-exam/src/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" id="contacts">
+<footer class="footer">
     <div class="container">
         <div class="footer-wrapper">
             <div class="footer__info">
