--- a/students/dunaieva_alona/second-exam/src/_hero.html
+++ b/students/dunaieva_alona/second-exam/src/_hero.html
@@ -37,7 +37,7 @@
         <div class="hero-slider__item">
             <img class="hero-slider__img" src="images/hero-bg-third.jpg" alt="third-bg">
             <div class="container hero-slide__container">
-                <h2 class="hero-slider__title">comfort and style</h2>
+                <h2 class="hero-slider__title">comfort & style</h2>
                 <p class="hero-slider__sub-text">We build not only walls, but also communities</p>
             </div>
             <div class="icons-down">
