--- a/students/dunaieva_alona/second-exam/src/_what-we-do.html
+++ b/students/dunaieva_alona/second-exam/src/_what-we-do.html
@@ -1,4 +1,4 @@
-<section class="service" id="#project">
+<section class="service" id="project">
     <div class="container">
         <div class="row">
             <div class="col-12">
