--- a/students/dunaieva_alona/second-exam/src/_header.html
+++ b/students/dunaieva_alona/second-exam/src/_header.html
@@ -20,7 +20,7 @@
                             <a href="#news" class="menu__link">News</a>
                         </li>
                         <li class="menu__item">
-                            <a href="contacts" class="menu__link">Contacts</a>
+                            <a href="#contacts" class="menu__link">Contacts</a>
                         </li>
                         <li class="only-mobile">
                             <ul class="social-list">
