--- a/students/dunaieva_alona/second-exam/src/_map.html
+++ b/students/dunaieva_alona/second-exam/src/_map.html
@@ -1,4 +1,4 @@
-<section class="map">
+<section class="map" id="contacts">
     <iframe class="map__bg" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12303.948573475871!2d34.5474114462822!3d49.586685218200365!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d82f609b31cdfb%3A0xa87d92bcbdca6f69!2z0JrQsNCy0YPQvQ!5e0!3m2!1suk!2sua!4v1696837819703!5m2!1suk!2sua" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="container">
         <div class="form-wrapper">
