fix errors in console, change script.js, add 8 img in gallery

--- a/students/dunaieva_alona/second-exam/src/index.html
+++ b/students/dunaieva_alona/second-exam/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum=scale=1">
     <title>Monticello</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
+    <link rel="shortcut icon" href="./images/logo_favicon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
