--- a/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
@@ -6,25 +6,21 @@
             </div>
             <ul class="menu menu__items">
                 <li class="menu__item">
-                    <a class="menu__link" href="#">ABOUT US</a>
+                    <a class="menu__link" href="#anchor-down-click">ABOUT US</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="#">PROJECTS</a>
+                    <a class="menu__link" href="#gallery">PROJECTS</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="#">NEWS</a>
+                    <a class="menu__link" href="#news">NEWS</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="#">CONTACT</a>
+                    <a class="menu__link" href="#form-contact">CONTACT</a>
                 </li>
                 <li class="menu__item menu__social">
                     @@include("./_socials.html",
                     {
                     "right":"right",
-                    })
-                    @@include("./_socials.html",
-                    {
-                    "right":" ",
                     })
                 </li>
             </ul>
