--- a/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
@@ -2,8 +2,10 @@
     <div class="container">
         <h2 class="project__title">WHAT WE DO</h2>
         <div class="project__block one">
-            <img class="project__block-img col-7" src="../images/project-one.png" alt="Trade Center Image">
-            <div class="project__block-text block-desc-one">
+            <div class="project__img-wrapper col-7">
+                <img class="project__block-img" src="../images/project-one.png" alt="Trade Center Image">
+            </div>
+            <div class="project__block-text block-desc-one col-5">
                 <p class="block__sub-text">ONE WORLD</p>
                 <h3 class="block__title">TRADE CENTER</h3>
                 <p class="block__desc">Increasing prosperity in our lives can be accomplished by having the right frame
