--- a/students/umienchuk_oksana/project_second_monticello/src/html/_footer.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_footer.html
@@ -1,21 +1,17 @@
 <section class="footer">
-    <img class="footer__img" src="../images/footer-bg.jpg" alt="Footer background">
+    <!-- <img class="footer__img" src="../images/footer-bg.jpg" alt="Footer background"> -->
     <div class="container footer__container">
         <div class="footer__form">
             @@include("./_form.html")
         </div>
         <div class="footer__socials">
             <img src="../images/logo.svg" alt="Logo">
-            @@include("./_socials.html")
-
-            @@include("./_socials.html",
-            {
-            "right":" ",
-            })
             @@include("./_socials.html",
             {
             "right":"right",
             })
         </div>
+        <p>Copyrights © 2020 Montichello</p>
     </div>
+
 </section>
