--- a/students/umienchuk_oksana/project_second_monticello/src/html/_form.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_form.html
@@ -1,2 +1,34 @@
-<section>
+<section class="form-section" id="form-contact">
+    <div class="form-section__container">
+        <h2 class="form-section__title">GET IN TOUCH</h2>
+        <div class="row">
+            <div class="col-6 info">
+                <ul class="info__items">
+                    <li class="info__item">
+                        <img class="info__img" src="../images/find-form.svg" alt="">
+                        <p class="info__disc">91 Nolan Extensions Suite 670</p>
+                    </li>
+                    <li class="info__item">
+                        <img class="info__img" src="../images/phone.svg" alt="">
+                        <p class="info__disc">+001 356-868-2454</p>
+                    </li>
+                    <li class="info__item">
+                        <img class="info__img" src="../images/email.svg" alt="">
+                        <p class="info__disc">montichello@service.com</p>
+                    </li>
+                    <li class="info__item">
+                        <img class="info__img" src="../images/clock.svg" alt="">
+                        <p class="info__disc">From 07:05AM to 19:30PM</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <form class="form" id="form-cont" action="">
+                    <input class="form__input" id="user-name" type="text" name="name" placeholder="Name" />
+                    <input class="form__input" id="email" type="email" name="email" placeholder="Email" />
+                    <button class="btn form__btn">SUBMIT</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </section>
