--- a/students/umienchuk_oksana/project_second_monticello/src/html/_news.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_news.html
@@ -1,4 +1,4 @@
-<section class="news">
+<section class="news" id="news">
     <div class="container">
         <h2 class="news__title">LATEST NEWS</h2>
         <div class="news-slider">
