--- a/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="menu-wrapper flex-wrap">
             <div class="logo">
-                <img class="logo__img" src="../images/logo.svg" alt="Monticello Logo">
+                <img class="logo__img" src="./images/logo.svg" alt="Monticello Logo">
             </div>
             <ul class="menu menu__items">
                 <li class="menu__item">
@@ -18,10 +18,7 @@
                     <a class="menu__link" href="#form-contact">CONTACT</a>
                 </li>
                 <li class="menu__item menu__social">
-                    @@include("./_socials.html",
-                    {
-                    "right":"right",
-                    })
+                    @@include("./_socials.html")
                 </li>
             </ul>
             <button class="menu-open-btn mobile-only" type="button">
