--- a/students/umienchuk_oksana/project_second_monticello/src/html/_news.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_news.html
@@ -4,7 +4,7 @@
         <div class="news-slider">
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-lauren-mancke-01.jpg" alt="Building Lauren Mancke">
+                    <img class="news-card__img" src="./images/news-lauren-mancke-01.jpg" alt="Building Lauren Mancke">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">SEE THE UNMATCHED BEAUTY OF THE GREAT.</h3>
@@ -13,7 +13,7 @@
                         for...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-01.jpg" alt="" class="news-card__author-img">
+                        <img src="./images/news-author-01.jpg" alt="" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">Alja Brun</h4>
                             <p class="news-card__author-data">20 Jan 2020</p>
@@ -23,7 +23,7 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-matthew-hamilton-02.jpg"
+                    <img class="news-card__img" src="./images/news-matthew-hamilton-02.jpg"
                         alt="Building Matthew Hamilton">
                 </div>
                 <div class="news-card__text">
@@ -31,7 +31,7 @@
                     <p class="news-card__sub-text">Having a home based business is a wonderful asset to your life...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-02.jpg" alt="" class="news-card__author-img">
+                        <img src="./images/news-author-02.jpg" alt="" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">Dominic Freeman</h4>
                             <p class="news-card__author-data">13 Dec 2019</p>
@@ -41,14 +41,14 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
+                    <img class="news-card__img" src="./images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="news-card__sub-text">There are many things that are important to catalog design...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
+                        <img src="./images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">ALICE WARD</h4>
                             <p class="news-card__author-data">30 Nov 2019</p>
@@ -58,14 +58,14 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
+                    <img class="news-card__img" src="./images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="news-card__sub-text">There are many things that are important to catalog design...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
+                        <img src="./images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">ALICE WARD</h4>
                             <p class="news-card__author-data">30 Nov 2019</p>
@@ -75,7 +75,7 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-matthew-hamilton-02.jpg"
+                    <img class="news-card__img" src="./images/news-matthew-hamilton-02.jpg"
                         alt="Building Matthew Hamilton">
                 </div>
                 <div class="news-card__text">
@@ -83,7 +83,7 @@
                     <p class="news-card__sub-text">Having a home based business is a wonderful asset to your life...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-02.jpg" alt="" class="news-card__author-img">
+                        <img src="./images/news-author-02.jpg" alt="" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">Dominic Freeman</h4>
                             <p class="news-card__author-data">13 Dec 2019</p>
@@ -93,14 +93,14 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
+                    <img class="news-card__img" src="./images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="news-card__sub-text">There are many things that are important to catalog design...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
+                        <img src="./images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">ALICE WARD</h4>
                             <p class="news-card__author-data">30 Nov 2019</p>
@@ -110,7 +110,7 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-lauren-mancke-01.jpg" alt="Building Lauren Mancke">
+                    <img class="news-card__img" src="./images/news-lauren-mancke-01.jpg" alt="Building Lauren Mancke">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">SEE THE UNMATCHED BEAUTY OF THE GREAT.</h3>
@@ -119,7 +119,7 @@
                         for...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-01.jpg" alt="" class="news-card__author-img">
+                        <img src="./images/news-author-01.jpg" alt="" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">Alja Brun</h4>
                             <p class="news-card__author-data">20 Jan 2020</p>
@@ -129,7 +129,7 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-matthew-hamilton-02.jpg"
+                    <img class="news-card__img" src="./images/news-matthew-hamilton-02.jpg"
                         alt="Building Matthew Hamilton">
                 </div>
                 <div class="news-card__text">
@@ -137,7 +137,7 @@
                     <p class="news-card__sub-text">Having a home based business is a wonderful asset to your life...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-02.jpg" alt="" class="news-card__author-img">
+                        <img src="./images/news-author-02.jpg" alt="" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">Dominic Freeman</h4>
                             <p class="news-card__author-data">13 Dec 2019</p>
@@ -147,14 +147,14 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
+                    <img class="news-card__img" src="./images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="news-card__sub-text">There are many things that are important to catalog design...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
+                        <img src="./images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">ALICE WARD</h4>
                             <p class="news-card__author-data">30 Nov 2019</p>
@@ -164,14 +164,14 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
+                    <img class="news-card__img" src="./images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="news-card__sub-text">There are many things that are important to catalog design...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
+                        <img src="./images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
                         <div class="news-card__block">
 
                             <h4 class="news-card__author-name">ALICE WARD</h4>
@@ -182,14 +182,14 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
+                    <img class="news-card__img" src="./images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="news-card__sub-text">There are many things that are important to catalog design...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
+                        <img src="./images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">ALICE WARD</h4>
                             <p class="news-card__author-data">30 Nov 2019</p>
@@ -199,7 +199,7 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-matthew-hamilton-02.jpg"
+                    <img class="news-card__img" src="./images/news-matthew-hamilton-02.jpg"
                         alt="Building Matthew Hamilton">
                 </div>
                 <div class="news-card__text">
@@ -207,7 +207,7 @@
                     <p class="news-card__sub-text">Having a home based business is a wonderful asset to your life...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-02.jpg" alt="" class="news-card__author-img">
+                        <img src="./images/news-author-02.jpg" alt="" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">Dominic Freeman</h4>
                             <p class="news-card__author-data">13 Dec 2019</p>
@@ -217,7 +217,7 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-lauren-mancke-01.jpg" alt="Building Lauren Mancke">
+                    <img class="news-card__img" src="./images/news-lauren-mancke-01.jpg" alt="Building Lauren Mancke">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">SEE THE UNMATCHED BEAUTY OF THE GREAT.</h3>
@@ -226,7 +226,7 @@
                         for...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-01.jpg" alt="" class="news-card__author-img">
+                        <img src="./images/news-author-01.jpg" alt="" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">Alja Brun</h4>
                             <p class="news-card__author-data">20 Jan 2020</p>
@@ -236,14 +236,14 @@
             </div>
             <div class="news-card">
                 <div class="news-card__img-container">
-                    <img class="news-card__img" src="../images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
+                    <img class="news-card__img" src="./images/news-joel-filipe-03.jpg" alt="Building Joel Filipe">
                 </div>
                 <div class="news-card__text">
                     <h3 class="news-card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="news-card__sub-text">There are many things that are important to catalog design...
                     </p>
                     <div class="news-card__author">
-                        <img src="../images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
+                        <img src="./images/news-author-03.jpg" alt="Alice Ward" class="news-card__author-img">
                         <div class="news-card__block">
                             <h4 class="news-card__author-name">ALICE WARD</h4>
                             <p class="news-card__author-data">30 Nov 2019</p>
