--- a/students/umienchuk_oksana/project_second_monticello/src/html/_hero.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_hero.html
@@ -2,7 +2,7 @@
     <div class="hero-slider">
         <div>
             <div class="hero-slider__block">
-                <img class="hero-slider__img" src="../images/header-hero.jpg" alt="Building">
+                <img class="hero-slider__img" src="./images/header-hero.jpg" alt="Building">
                 <div class="container hero-slider__container">
                     <h1 class="hero-slider__title">SIMPLE & MODERN</h1>
                     <p class="hero-slider__sub-text">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
@@ -11,7 +11,7 @@
         </div>
         <div>
             <div class="hero-slider__block">
-                <img class="hero-slider__img" src="../images/hero-02.jpg" alt="Building">
+                <img class="hero-slider__img" src="./images/hero-02.jpg" alt="Building">
                 <div class="container hero-slider__container">
                     <h2 class="hero-slider__sub-title">Everyday Life</h2>
                     <p class="hero-slider__sub-text">Creating Beauty with Simplicity and Modernity</p>
@@ -20,7 +20,7 @@
         </div>
         <div>
             <div class="hero-slider__block">
-                <img class="hero-slider__img" src="../images/hero-03.jpg" alt="Building">
+                <img class="hero-slider__img" src="./images/hero-03.jpg" alt="Building">
                 <div class="container hero-slider__container">
                     <h2 class="hero-slider__sub-title">Our Daily Mission</h2>
                     <p class="hero-slider__sub-text">Infusing the World with Simple, Modern Beauty</p>
@@ -29,7 +29,7 @@
         </div>
         <div>
             <div class="hero-slider__block">
-                <img class="hero-slider__img" src="../images/hero-04.jpg" alt="Building">
+                <img class="hero-slider__img" src="./images/hero-04.jpg" alt="Building">
                 <div class="container hero-slider__container">
                     <h2 class="hero-slider__sub-title">Beauty Unveiled</h2>
                     <p class="hero-slider__sub-text">A Simple, Modern Approach</p>
@@ -38,7 +38,7 @@
         </div>
         <div>
             <div class="hero-slider__block">
-                <img class="hero-slider__img" src="../images/hero-05.jpg" alt="Building">
+                <img class="hero-slider__img" src="./images/hero-05.jpg" alt="Building">
                 <div class="container hero-slider__container">
                     <h2 class="hero-slider__sub-title">Everyday Beauty</h2>
                     <p class="hero-slider__sub-text">A Touch of Modern Simplicity</p>
