--- a/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
@@ -21,7 +21,10 @@
                 </div>
             </div>
         </div>
-        <div class="project__block two">
+        <div class="project__block two revers">
+            <div class="project__img-wrapper-right col-7 col-sm-12">
+                <img class="project__block-img" src="./images/project-two.png" alt="Commerce Centre Image">
+            </div>
             <div class="project__block-text block-desc-two col-5 col-sm-12">
                 <p class="block__sub-text">INTERNATIONAL</p>
                 <h3 class="block__title">COMMERCE CENTRE</h3>
@@ -34,9 +37,6 @@
                     </svg>
                     <p class="block__find-map">Hong Kong - 1588 feet</p>
                 </div>
-            </div>
-            <div class="project__img-wrapper-right col-7 col-sm-12">
-                <img class="project__block-img" src="./images/project-two.png" alt="Commerce Centre Image">
             </div>
         </div>
     </div>
