--- a/students/umienchuk_oksana/project_second_monticello/src/index.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Monticello</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/facebook.svg" type="image/x-icon">
 </head>
 
 <body>
