--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_footer.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_footer.html
@@ -30,4 +30,7 @@
         </div>
     </div>
     <p class="copyrights">Copyrights © 2020 Montichello</p>
+    <a class="scroll-to-top" href="#">
+        <img class="scroll-to-top__arrow" src="images/scroll.svg" alt="arrow">
+    </a>
 </div>
