--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
@@ -38,8 +38,12 @@
                 </div>
                 <div class="col-6 col-sm-12">
                     <form class="form" id="user-form" action="">
-                        <input id="user-name" type="text" name="user-name" placeholder="Name" />
-                        <input id="email" type="email" name="email" placeholder="Email" />
+                        <div class="form__input-wrap">
+                            <input id="user-name" type="text" name="user-name" placeholder="Name" />
+                        </div>
+                        <div class="form__input-wrap">
+                            <input id="email" type="email" name="email" placeholder="Email" />
+                        </div>
                         <div class="btn-continer">
                             <button class="form-btn">Submit</button>
                         </div>
