--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_what-we-do.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_what-we-do.html
@@ -12,9 +12,7 @@
                 <p class="what-we-do__subtitle">ONE WORLD</p>
                 <h3 class="what-we-do__title">TRADE CENTER</h3>
                 <p class="what-we-do__decription">Increasing prosperity in our lives can be accomplished by having the
-                    right
-                    frame of mind. The truth is, our thoughts are
-                    very powerful.</p>
+                    right frame of mind. The truth is, our thoughts are very powerful.</p>
                 <div class="what-we-do__btn-wrapper btn-wrapper">
                     <a class="btn" href="#">MORE DETAILS</a>
                 </div>
@@ -37,9 +35,7 @@
                 <p class="what-we-do__subtitle">INTERNATIONAL</p>
                 <h3 class="what-we-do__title">COMMERCE CENTRE</h3>
                 <p class="what-we-do__decription">Successful businesses have many things in common, today we’ll look at
-                    the big
-                    ‘R’ of recognition and how a digital
-                    advertising network may help..</p>
+                    the big ‘R’ of recognition and how a digital advertising network may help..</p>
                 <div class="what-we-do__btn-wrapper btn-wrapper">
                     <a class="btn" href="#">MORE DETAILS</a>
                 </div>
