--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
@@ -3,31 +3,31 @@
         @@include('_hero-slider-item.html', {
         "hero-slider-img": "images/hero-slide.jpg",
         "hero-slider-img-alt": "hero-slide image",
-        "hero-slider-title": "SIMPLE & MODERN",
+        "hero-slider-title": "SIMPLE &amp; MODERN",
         "hero-slider-text": "WE MAKE THE WORLD BEAUTIFUL"
         })
         @@include('_hero-slider-item.html', {
         "hero-slider-img": "images/cubic-house.jpg",
         "hero-slider-img-alt": "cubic-house",
-        "hero-slider-title": "ELEGANT & TIMELESS",
+        "hero-slider-title": "ELEGANT &amp; TIMELESS",
         "hero-slider-text": "WE CREATE TIMELESS BEAUTY"
         })
         @@include('_hero-slider-item.html', {
         "hero-slider-img": "images/futur-house.jpg",
         "hero-slider-img-alt": "futur-house",
-        "hero-slider-title": "STYLISH & SLEEK",
+        "hero-slider-title": "STYLISH &amp; SLEEK",
         "hero-slider-text": "UNVEIL SLEEK ELEGANCE"
         })
         @@include('_hero-slider-item.html', {
         "hero-slider-img": "images/white-house.jpg",
         "hero-slider-img-alt": "white-house",
-        "hero-slider-title": "MINIMAL & ELEGANT",
+        "hero-slider-title": "MINIMAL &amp; ELEGANT",
         "hero-slider-text": "WE CREATE MINIMALISM"
         })
         @@include('_hero-slider-item.html', {
         "hero-slider-img": "images/sphere-house.jpg",
         "hero-slider-img-alt": "sphere-house",
-        "hero-slider-title": "MODERN & CREATIVE",
+        "hero-slider-title": "MODERN &amp; CREATIVE",
         "hero-slider-text": "FUELING CREATIVITY WITH MODERN DESIGN"
         })
     </div>
