--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/index.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Monticello</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/sprite.svg#location" type="image/x-icon">
+    <link rel="icon" href="./images/arrow-left-circle.svg" type="image/x-icon">
 </head>
 
 <body class="page">
@@ -20,15 +20,12 @@
         @@include('_news.html')
         @@include('_gallery.html')
         @@include('_get-in-touch.html')
-
     </main>
 
     <footer class="footer">
         @@include('_footer.html')
     </footer>
-    <a class="scroll-to-top" href="#">
-        <img class="scroll-to-top__arrow" src="images/scroll.svg" alt="arrow">
-    </a>
+
     <script src="js/script.js"></script>
 </body>
 
