--- a/students/tiselko_iryna/exam_js-module/src/_header.html
+++ b/students/tiselko_iryna/exam_js-module/src/_header.html
@@ -7,16 +7,16 @@
             <nav class="menu col-7 cols-sm-6">
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a href="#" class="menu__link">about us</a>
+                        <a href="#about" class="menu__link active">about us</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">projects</a>
+                        <a href="#gallery" class="menu__link">projects</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">news</a>
+                        <a href="#news" class="menu__link">news</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">contact</a>
+                        <a href="#contacts-form" class="menu__link">contact</a>
                     </li>
                     <li class="menu__item socials-items">
                         <a href="https://www.facebook.com/" target="_blank"
