--- a/students/tiselko_iryna/exam_js-module/src/_about.html
+++ b/students/tiselko_iryna/exam_js-module/src/_about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
     <div class="container">
         <div class="row">
             <h3 class="about__heading">What we do</h3>
