--- a/students/tiselko_iryna/exam_js-module/src/_hero.html
+++ b/students/tiselko_iryna/exam_js-module/src/_hero.html
@@ -1,11 +1,11 @@
-<section class="hero">
+<section class="hero section">
     <div class="hero-slider">
         <div class="hero-slider__item">
             <img src="images/hero/main-hero.jpg" alt="slider_1" class="hero-slider__img">
             <div class="container hero-slider__container">
                 <h1 class="hero-slider__title">SIMPLE &amp; MODERN</h1>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
-                <a href="#">
+                <a href="#about" class="smoothScrollDown__link">
                     <svg class="icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
@@ -17,7 +17,7 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
-                <a href="#">
+                <a href="#about" class="smoothScrollDown__link">
                     <svg class="icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
@@ -29,7 +29,7 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
-                <a href="#">
+                <a href="#about" class="smoothScrollDown__link">
                     <svg class="icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
@@ -41,7 +41,7 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
-                <a href="#">
+                <a href="#about" class="smoothScrollDown__link">
                     <svg class="icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
@@ -53,7 +53,7 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
-                <a href="#">
+                <a href="#about" class="smoothScrollDown__link">
                     <svg class="icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
