--- a/students/tiselko_iryna/exam_js-module/src/_news.html
+++ b/students/tiselko_iryna/exam_js-module/src/_news.html
@@ -1,4 +1,4 @@
-<section class="news">
+<section class="news" id="news">
     <div class="container">
         <h3 class="news__heading">LATEST NEWS</h3>
         <div class="row news__row">
