--- a/students/tiselko_iryna/exam_js-module/src/index.html
+++ b/students/tiselko_iryna/exam_js-module/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Monticello</title>
     <link rel="icon" type="images/png" href="/images/fav.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
