--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_footer.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_footer.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-6">
             <div class="logo">
-                <img class="logo__img" src="images/logo.png" alt="monticello-logo">
+                <img class="logo__img" src="./images/logo.png" alt="monticello-logo">
             </div>
         </div>
         <div class="col-6 social-media">
@@ -31,6 +31,6 @@
     </div>
     <p class="copyrights">Copyrights © 2020 Montichello</p>
     <a class="scroll-to-top" href="#">
-        <img class="scroll-to-top__arrow" src="images/scroll.svg" alt="arrow">
+        <img class="scroll-to-top__arrow" src="./images/scroll.svg" alt="arrow">
     </a>
 </div>
