add media queries

--- a/students/tiselko_iryna/exam_js-module/src/_footer.html
+++ b/students/tiselko_iryna/exam_js-module/src/_footer.html
@@ -9,7 +9,7 @@
         <div class="footer__contact-form contact-form" id="contacts">
             <h3 class="contact-form__title">get in touch</h3>
             <div class="contact-form__wrapper">
-                <ul class="contact-form__contact col-6">
+                <ul class="contact-form__contact col-6 col-sm-12">
                     <li class="contact-form__contact-item">
                         <svg class="contact-form__icon">
                             <use xlink:href="#location-dot"></use>
@@ -35,7 +35,7 @@
                         <span class="contact-form__addres-text">From 07:05AM to 19:30PM</span>
                     </li>
                 </ul>
-                <form id="contacts-form" action="#" method="get" class="contact-form__inputs col-6">
+                <form id="contacts-form" action="#" method="get" class="contact-form__inputs col-6 col-sm-12">
                     <div class="contact-form__name-input">
                         <input type="text" name="name" id="name" placeholder="Full Name" value="" class="input_name">
                     </div>
@@ -49,10 +49,10 @@
             </div>
         </div>
         <div class="row footer__row">
-            <div class="col-6 footer__logo">
+            <div class="col-6 col-sm-12 footer__logo">
                 <img src="./images/Logo.png" alt="Monticello">
             </div>
-            <div class="col-6 footer__socials">
+            <div class="col-6 col-sm-12 footer__socials">
                 <a href="https://www.facebook.com/" target="_blank" class="footer__socials-link">
                     <svg class="icon">
                         <use xlink:href="#facebook"></use>
@@ -69,7 +69,7 @@
                     </svg>
                 </a>
             </div>
-            <div class="col-6 footer__copyright">
+            <div class="col-6 col-sm-12 footer__copyright">
                 <p class="copyright">Copyrights &copy; 2020 Montichello</p>
             </div>
         </div>
