--- a/students/tiselko_iryna/exam_js-module/src/_header.html
+++ b/students/tiselko_iryna/exam_js-module/src/_header.html
@@ -4,7 +4,7 @@
             <div class="header__logo col-3 col-sm-5">
                 <img src="images/Logo.png" alt="Monticello-logo" class="logo-img">
             </div>
-            <nav class="menu col-7 cols-sm-6">
+            <nav class="menu col-7 col-sm-6 col-md-12">
                 <ul class="menu__list">
                     <li class="menu__item">
                         <a href="#about" class="menu__link active">about us</a>
