--- a/students/tiselko_iryna/exam_js-module/src/_hero.html
+++ b/students/tiselko_iryna/exam_js-module/src/_hero.html
@@ -6,7 +6,7 @@
                 <h1 class="hero-slider__title">SIMPLE &amp; MODERN</h1>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
                 <a href="#about" class="smoothScrollDown__link">
-                    <svg class="icon">
+                    <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
                 </a>
@@ -18,7 +18,7 @@
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
                 <a href="#about" class="smoothScrollDown__link">
-                    <svg class="icon">
+                    <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
                 </a>
@@ -30,7 +30,7 @@
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
                 <a href="#about" class="smoothScrollDown__link">
-                    <svg class="icon">
+                    <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
                 </a>
@@ -42,7 +42,7 @@
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
                 <a href="#about" class="smoothScrollDown__link">
-                    <svg class="icon">
+                    <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
                 </a>
@@ -54,7 +54,7 @@
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
                 <a href="#about" class="smoothScrollDown__link">
-                    <svg class="icon">
+                    <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
                     </svg>
                 </a>
