--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
@@ -17,9 +17,40 @@
             <a class="gallery-grid__gallery-item gallery-item" href="images/broad.jpg" data-lightbox="lightbox">
                 <img class="gallery-item__img" src="images/broad.jpg" alt="">
             </a>
+
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/big-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/brasilia_congresso.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/red-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/schematic.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/white-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/warsaw_modern.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/broad.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/cubic-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/big-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/sphere-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/red-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/curved-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/white-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/brick-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item gallery-item__hidden gallery-item__hidden-on"
+                href="images/broad.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/squere-house.jpg" alt="">
+            </a>
         </div>
-        <div class="gallery__btn-wrapper">
-            <a class="gallery__btn btn" href="#">SEE MORE</a>
-        </div>
+        <button class="gallery__btn btn">SEE MORE</button>
     </div>
 </section>
