--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
@@ -27,7 +27,7 @@
             @@include('_carusel-item.html', {
             "item-image": "images/curved-house.jpg",
             "item-image-alt": "curved-house",
-            "item-title": "HYPNOTIZE YOURSELF INTO THE GHOST.",
+            "item-title": "HYPNOTIZE YOURSELF INTO THE <br> GHOST.",
             "item-description": "There are many things that are important to catalog design...",
             "user-image": "images/user-icon3.jpg",
             "user-image-alt": "ALICE WARD",
