--- a/students/kukuruza_maxim/exam-2/src/index.html
+++ b/students/kukuruza_maxim/exam-2/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monticello</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="../src/js/HeroSlider.js" type="text/javascript"></script>
 </head>
 
 <body>
