--- a/students/kukuruza_maxim/exam-1/src/index.html
+++ b/students/kukuruza_maxim/exam-1/src/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    @@include("header.html")
+    @@include("_header.html")
     <main>
-        @@include("why.html")
-        @@include("booknow1.html")
-        @@include("booknow2.html")
-        @@include("feedback.html")
+        @@include("_why.html")
+        @@include("_booknow1.html")
+        @@include("_booknow2.html")
+        @@include("_feedback.html")
     </main>
-    @@include("footer.html")
+    @@include("_footer.html")
 </body>
 
 </html>
