--- a/students/savchak_marharyta/exam_1/src/index.html
+++ b/students/savchak_marharyta/exam_1/src/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body class="page">
-    @@include('./heroblock.html')
-    @@include('./header.html')
-    @@include('./why_choose_us.html')
-    @@include('./tip.html')
-    @@include('./places.html')
-    @@include('./testimonial.html')
-    @@include('./footer.html')
+    @@include('./_heroblock.html')
+    @@include('./_header.html')
+    <main>
+        @@include('./_why_choose_us.html')
+        @@include('./_tip.html')
+        @@include('./_places.html')
+        @@include('./_testimonial.html')
+    </main>
+    @@include('./_footer.html')
 </body>
 
 </html>
