--- a/students/savchak_marharyta/exam_2/src/index.html
+++ b/students/savchak_marharyta/exam_2/src/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js type</title>
+    <title>Document</title>
 </head>
 
-<body class="page">
+<body>
 
-    <script src="./js/script.js"></script>
 </body>
 
 </html>
